--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 <html>
 
   <head>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110879664-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-110879664-1');
-    </script>
-
     <title>Muscle Weakness Visualization</title>
     <link rel="stylesheet" href="base.css" />
   </head>
@@ -20,7 +9,7 @@
       <div id="mainView">
 
          <div id="leftPanel" class="mainPanel sidePanel">
-            <p class="sideLabel">Patient's Right</p>
+            <p class="sideLabel">patient's right</p>
             <div id="leftButtonBank" class="buttonBank"></div>
             <div id="miscLeft" class="misc">
                <div id="menu">         
@@ -42,10 +31,10 @@
          <div id="centerPanel" class="mainPanel"></div>
 
          <div id="rightPanel" class="mainPanel sidePanel">
-            <p class="sideLabel">Patient's Left</p>
+            <p class="sideLabel">patient's left</p>
             <div id="rightButtonBank" class="buttonBank"></div>
             <div id="miscRight" class="misc">
-               <p id="scaleTitle">MRC Scale</p>
+               <p id="scaleTitle">MRC scale</p>
                <div id="colorBar"></div>
                <div id="rightButtons">
                   <button id="fullStrength" class="menuButton" onclick="setFullStrength()">
